panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__equality-ops__test_int_unequal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/equality-ops/test_int_unequal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/equality-ops/test_int_unequal.c"
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (a~1 `int` @0) (27 `int` @0))
         (return
            (equal `int` @4
               (a~1 `int` @0)
               (42 `int` @8))))))

----- stderr -----
